--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,12 @@
 <!--[if lte IE 8]>
 <link rel="stylesheet" rel="nofollow" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
 <![endif]-->
- 
-<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/geotiff@0.4.1/dist/main.js"></script>
+
+    <script src="https://unpkg.com/georaster-layer-for-leaflet/georaster-layer-for-leaflet.browserify.min.js"></script>
+
 <style>
  
 #map {width: 1000px; height: 500px; }
@@ -19,7 +23,10 @@
     <div id="map"></div>
  
 <script type='text/javascript'>
- 
+
+var parse_georaster = require("georaster");
+var GeoRasterLayer = require("georaster-layer-for-leaflet");
+
 //Определяем карту, координаты центра и начальный масштаб
 var map = L.map('map').setView([59.9386, 30.3141], 12);
  
@@ -29,30 +36,33 @@ L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 }).addTo(map)
 
 
-//var grayscale = L.tileLayer(mapboxUrl, {id: 'MapID', tileSize: 512, zoomOffset: -1, attribution: mapboxAttribution}),
-  //  streets   = L.tileLayer(mapboxUrl, {id: 'MapID', tileSize: 512, zoomOffset: -1, attribution: mapboxAttribution});
+var url_to_geotiff_file = "1.tif";
 
-//var map = L.map('map', {
-    //center: [59.9386, 30.3141],
-    //zoom: 10,
-    //layers: [grayscale, cities]
-//});
+fetch(url_to_geotiff_file)
+  .then(response => response.arrayBuffer())
+  .then(arrayBuffer => {
+    parse_georaster(arrayBuffer).then(georaster => {
+      console.log("georaster:", georaster);
 
-//var baseMaps = {
-    //"Grayscale": grayscale,
-    //"Streets": streets
-//};
+      /*
+          GeoRasterLayer is an extension of GridLayer,
+          which means can use GridLayer options like opacity.
+          Just make sure to include the georaster option!
+          http://leafletjs.com/reference-1.2.0.html#gridlayer
+      */
+      var layer = new GeoRasterLayer({
+          georaster: georaster,
+          opacity: 0.7,
+          pixelValuesToColorFn: values => values[0] > 100 ? '#ff0000' : '#0000ff',
+          resolution: 64 // optional parameter for adjusting display resolution
+      });
+      layer.addTo(map);
 
-//var overlayMaps = {
-    //"Cities": cities
-//};
+      map.fitBounds(layer.getBounds());
 
-//L.control.layers(baseMaps, overlayMaps).addTo(map);
+  });
+});
 
-//var baseMaps = {
-    //"<span style='color: gray'>Grayscale</span>": grayscale,
-    //"Streets": streets
-//};
 </script>
 
     <p>Welcome to <%= title %></p>
